// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contracts repo [get] should retrieve contract by id from DB 1`] = `
{
  "_id": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
  "address": "0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
  "block": 14444,
  "createdAt": 2022-02-01T00:00:00.000Z,
  "name": "example",
  "type": "ERC-721",
}
`;

exports[`Contracts repo [get] should retrieve contract by id from DB in mix lower upperCase 1`] = `
{
  "_id": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
  "address": "0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
  "block": 14444,
  "createdAt": 2022-02-01T00:00:00.000Z,
  "name": "example",
  "type": "ERC-721",
}
`;

exports[`Contracts repo [get] should retrieve contract by id from DB in mix lower upperCase 2`] = `
{
  "_id": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
  "address": "0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
  "block": 14444,
  "createdAt": 2022-02-01T00:00:00.000Z,
  "name": "example",
  "type": "ERC-721",
}
`;

exports[`Contracts repo [getCreatedAfter] method should retrieve contracts documents created after a specific date 1`] = `
[
  {
    "_id": "eth:0x20Cc3Bd22144209CF93dA14017C506b0ed0F3e4c",
    "address": "0x20Cc3Bd22144209CF93dA14017C506b0ed0F3e4c",
    "block": 14316461,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:24:00.000Z,
    "name": "Audiovisions",
    "type": "ERC-721",
  },
  {
    "_id": "eth:0xC36442b4a4522E871399CD717aBDD847Ab11FE88",
    "address": "0xC36442b4a4522E871399CD717aBDD847Ab11FE88",
    "block": 14316461,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:25:00.000Z,
    "name": "Uniswap V3 Positions NFT-V1",
    "type": "ERC-721",
  },
  {
    "_id": "eth:0xc5846767a9c0D5096D7b791De56b258Bc7C69C5f",
    "address": "0xc5846767a9c0D5096D7b791De56b258Bc7C69C5f",
    "block": 14316462,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:26:00.000Z,
    "name": "WEEDGANG.GAME - STRAIN",
    "type": "ERC-721",
  },
]
`;

exports[`Contracts repo [getCreatedAfter] method should retrieve contracts documents created after a specific date 2`] = `[]`;

exports[`Contracts repo [getCreatedAfter] method should retrieve contracts documents created after a specific date 3`] = `
[
  {
    "_id": "eth:0x9FB2EEb75754815c5Cc9092Cd53549cEa5dc404f",
    "address": "0x9FB2EEb75754815c5Cc9092Cd53549cEa5dc404f",
    "block": 14316461,
    "collectionImage": null,
    "createdAt": 2019-12-15T04:55:00.000Z,
    "name": "Superlative Mutated Apes",
    "type": "ERC-721",
  },
  {
    "_id": "eth:0xE1E484251ffFee048A839bc2d68C160BD8C82aBB",
    "address": "0xE1E484251ffFee048A839bc2d68C160BD8C82aBB",
    "block": 14316462,
    "collectionImage": null,
    "createdAt": 2019-12-16T02:22:00.000Z,
    "name": "RichApesClub",
    "type": "ERC-721",
  },
  {
    "_id": "eth:0x20Cc3Bd22144209CF93dA14017C506b0ed0F3e4c",
    "address": "0x20Cc3Bd22144209CF93dA14017C506b0ed0F3e4c",
    "block": 14316461,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:24:00.000Z,
    "name": "Audiovisions",
    "type": "ERC-721",
  },
  {
    "_id": "eth:0xC36442b4a4522E871399CD717aBDD847Ab11FE88",
    "address": "0xC36442b4a4522E871399CD717aBDD847Ab11FE88",
    "block": 14316461,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:25:00.000Z,
    "name": "Uniswap V3 Positions NFT-V1",
    "type": "ERC-721",
  },
  {
    "_id": "eth:0xc5846767a9c0D5096D7b791De56b258Bc7C69C5f",
    "address": "0xc5846767a9c0D5096D7b791De56b258Bc7C69C5f",
    "block": 14316462,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:26:00.000Z,
    "name": "WEEDGANG.GAME - STRAIN",
    "type": "ERC-721",
  },
]
`;

exports[`Contracts repo [getCreatedAfter] method should retrieve contracts documents created after a specific date 4`] = `
[
  {
    "_id": "eth:0x20Cc3Bd22144209CF93dA14017C506b0ed0F3e4c",
    "address": "0x20Cc3Bd22144209CF93dA14017C506b0ed0F3e4c",
    "block": 14316461,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:24:00.000Z,
    "name": "Audiovisions",
    "type": "ERC-721",
  },
  {
    "_id": "eth:0xC36442b4a4522E871399CD717aBDD847Ab11FE88",
    "address": "0xC36442b4a4522E871399CD717aBDD847Ab11FE88",
    "block": 14316461,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:25:00.000Z,
    "name": "Uniswap V3 Positions NFT-V1",
    "type": "ERC-721",
  },
  {
    "_id": "eth:0xc5846767a9c0D5096D7b791De56b258Bc7C69C5f",
    "address": "0xc5846767a9c0D5096D7b791De56b258Bc7C69C5f",
    "block": 14316462,
    "collectionImage": null,
    "createdAt": 2019-12-17T03:26:00.000Z,
    "name": "WEEDGANG.GAME - STRAIN",
    "type": "ERC-721",
  },
]
`;

exports[`Contracts repo [getCreatedAfter] method should retrieve contracts documents created after a specific date 5`] = `[]`;

exports[`Contracts repo [insertIfNone] should insert new contract into db 1`] = `
{
  "acknowledged": true,
  "matchedCount": 0,
  "modifiedCount": 0,
  "upsertedCount": 1,
  "upsertedId": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
}
`;

exports[`Contracts repo [insertIfNone] should not modify existing contract 1`] = `
{
  "acknowledged": true,
  "matchedCount": 0,
  "modifiedCount": 0,
  "upsertedCount": 1,
  "upsertedId": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
}
`;

exports[`Contracts repo [insertIfNone] should not modify existing contract 2`] = `
{
  "acknowledged": true,
  "matchedCount": 1,
  "modifiedCount": 0,
  "upsertedCount": 0,
  "upsertedId": null,
}
`;

exports[`Contracts repo [insertIfNone] should not modify existing contract 3`] = `
[
  {
    "_id": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
    "address": "0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
    "block": 14445,
    "collectionImage": null,
    "createdAt": 2022-02-01T00:00:00.000Z,
    "name": "example",
    "type": "ERC-721",
  },
]
`;

exports[`Contracts repo [updateName] should update name for contract stored in db 1`] = `
{
  "acknowledged": true,
  "matchedCount": 1,
  "modifiedCount": 1,
  "upsertedCount": 0,
  "upsertedId": null,
}
`;

exports[`Contracts repo [updateName] should update name for contract stored in db 2`] = `
{
  "_id": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
  "address": "0xc4545a0f49e1246bdba8601fd79412d240cfc6aa",
  "block": 14444,
  "createdAt": 2022-02-01T00:00:00.000Z,
  "name": "new name",
  "type": "ERC-721",
}
`;
